--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "clsx": "^2.1.0",
-    "next": "14.2.2",
+    "next": "^14.3.0-canary.23",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "tailwind-merge": "^2.3.0",
-    "zod": "^3.24.0-canary.20240423T173108"
+    "zod": "^3.24.0-canary.20240423T173108",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.11",
