--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "@tanstack/react-query": "^5.32.0",
     "@types/node": "^20",
