--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.377.0",
     "next": "^14.3.0-canary.23",
     "react": "^18",
     "react-dom": "^18",
