--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
     "clsx": "^2.1.0",
     "lucide-react": "^0.377.0",
